<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenDetail"
    tools:context=".ui.detail.DetailActivity">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/username"
        style="@style/TextColor"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="16dp"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_not_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#f5f6f8"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/username"
        style="@style/TextColor"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@+id/profileImg"
        app:layout_constraintStart_toEndOf="@+id/profileImg"/>

    <TextView
        android:id="@+id/tvCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/company"
        style="@style/TextColor"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintStart_toEndOf="@+id/profileImg"/>

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/city"
        style="@style/TextColor"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tvCompany"
        app:layout_constraintStart_toEndOf="@+id/profileImg"/>

    <include
        android:id="@+id/infoUser"
        layout="@layout/info_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImg"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:contentDescription="Tab Layout"
        app:tabTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/infoUser"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>